--- a/css/styles.css
+++ b/css/styles.css
@@ -345,12 +345,10 @@ template {
   color: #777;
   box-sizing: border-box;
 }
-
-p {
+* p {
   line-height: 1.45em;
 }
-
-a {
+* a {
   text-decoration: none;
 }
 
@@ -368,7 +366,7 @@ a {
 }
 
 .link {
-  color: #777;
+  color: #51ddfc;
   font-weight: 700;
 }
 
@@ -449,8 +447,7 @@ a {
   display: flex;
   flex-direction: column;
 }
-
-.nav-link {
+.nav .nav-link {
   text-align: center;
   border-radius: 5px;
   padding: 10px 0;
@@ -458,10 +455,9 @@ a {
   width: 100%;
   transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 }
-
-.nav-link:hover {
+.nav .nav-link:hover {
   color: #fff;
-  background-color: #58e1c1;
+  background-color: #99edd9;
 }
 
 /* ============================================= */
