--- a/scss/components/_navigation.scss
+++ b/scss/components/_navigation.scss
@@ -7,8 +7,6 @@
     flex-basis: 100%;
     display: flex;
     flex-direction: column;
-  }
-  
   .nav-link {
     text-align: center;
     border-radius: 5px;
@@ -18,10 +16,9 @@
     transition: 
       background-color .2s ease-in-out, 
       color .2s ease-in-out;
-  }
-  
-  .nav-link:hover {
+    &:hover {
     color: $white;
-    background-color: $color-primary;
+    background-color: $color-primary-light;
+    }
   }
-  
+}
